<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchview_xml"
            app:theme="@style/AppSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:iconifiedByDefault="false"
            app:queryBackground="@color/transparent"
            app:queryHint=" חיפוש" />

        <ListView
            android:id="@+id/listview_xml"
            android:divider="@color/app_brown_2"
            android:dividerHeight="1.0sp"
            android:padding="8dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/searchview_xml"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline_button"
            android:clickable="true"
            android:layout_width="0dp"
            android:background="@color/app_background"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/display_calculation_by_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/listview_xml"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_calories_xml"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textStyle="bold"
                    android:textColor="@color/darker_brown"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/calories"
                    android:textStyle="bold"
                    android:textColor="@color/darker_brown"
                    android:textSize="11sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/equals"

                android:textStyle="bold"
                android:textColor="@color/darker_brown"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/items_calories_per100_xml"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/darker_brown"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calories_per_gram"
                    android:textStyle="bold"
                    android:textColor="@color/darker_brown"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/multiply"
                android:textStyle="bold"
                android:textColor="@color/darker_brown"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/grams_edittext_xml"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="22dp"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:maxLength="4"
                android:background="@drawable/custom_input_field"
                android:textColor="@color/darker_brown"
                android:textColorHint="@color/app_brown_1"
                android:textSize="12sp"
                android:hint="@string/grams"
                android:textStyle="bold"
                android:inputType="number"
                android:autofillHints="" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/display_calculation_by_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/listview_xml"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_calories_xml_by_unit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textStyle="bold"
                    android:textColor="@color/darker_brown"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calories"
                    android:textStyle="bold"
                    android:textColor="@color/darker_brown"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/equals"
                android:textStyle="bold"
                android:textColor="@color/darker_brown"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_calories_per_unit_xml"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/darker_brown"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calories_per_unit"
                    android:textStyle="bold"
                    android:textColor="@color/darker_brown"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/multiply"
                android:textStyle="bold"
                android:textColor="@color/darker_brown"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/units_edittext_xml"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="22dp"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:maxLength="4"
                android:background="@drawable/custom_input_field"
                android:textColor="@color/darker_brown"
                android:textColorHint="@color/app_brown_1"
                android:textSize="11sp"
                android:hint="@string/units"
                android:textStyle="bold"
                android:inputType="number"
                android:autofillHints="" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/darker_brown"
            android:background="@drawable/custom_button_shape"
            android:text="@string/add"

            android:textColor="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>