<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/search_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:background="@drawable/button_bg_search"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:fontFamily="@font/secular_one"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_H20"
        android:layout_marginVertical="40dp"
        android:text="@string/search"
        android:layout_marginStart="32dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <DatePicker
        android:id="@+id/date_picker_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_H20"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nothing_to_show"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/darker_brown"
        android:fontFamily="@font/secular_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_H20"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/nothing_to_show_textview"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_H20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_H20"
        tools:listitem="@layout/recyclerview_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_new_entry"
        android:elevation="8dp"
        android:focusable="true"
        android:src="@drawable/plus_icon"
        app:backgroundTint="@color/app_brown_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>